fix: prevent side scroll on mobile

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 @import './styles/variables';
 html, body {
   height: 100%;
+  overflow: hidden;
 }
 h1 {
   font-weight: 200;
